Fixing the navbar to the top and changing styling so image go behind and top image is not cliped at top

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,17 @@ body {
 
 .main-image-gap {
  margin: 0;
- padding: 0;
+ padding-top: 3em;
+ padding-left: 0;
+ padding-right: 0;
+ 
 }
+
+.main-image {
+
+}
+
+
 
 .row {
  margin: 0;
@@ -27,6 +36,12 @@ body {
 .text-bold {
  font-weight: bold;
 }
+
+.main-content {
+ padding-top: 60px;
+}
+
+
 /*   -------------General end--------------         */
 
 /*   -------------Navbar start--------------         */
@@ -37,6 +52,9 @@ body {
  font-weight: bold;
  padding-top: 0;
  padding-bottom: 0;
+ position: fixed;
+ z-index: 9999;
+ 
 }
 
 
